# spec

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
inc/wasm_embedded/: display.h  gpio.h  i2c.h  spi.h  uart.h
lib/ewasm/: gpio.h  i2c.h  spi.h
lib/wasm_embedded/: gpio.h  i2c.h  spi.h
src/: api.rs  display.rs  gpio.rs  i2c.rs  lib.rs  spi.rs  uart.rs
src/bindgen/: mod.rs
src/wiggle/: gpio.rs  i2c.rs  mod.rs  spi.rs  uart.rs
tests/: gpio.toml  i2c.toml  spi.toml  uart.toml
witx/: common.witx  device.witx  display.witx  gpio.witx  i2c.witx  spi.witx  uart.witx
