[package]
name = "wasm-embedded-spec"
description = "Embedded WASM WITX specification"
repository = "https://github.com/embedded-wasm/spec"
authors = [
  "Ryan Kurte <ryan@kurte.nz>"
]
license = "MPL-2.0"
version = "0.4.0"
edition = "2021"

# Links argument required to pass variables to dependencies
links = "embedded-wasm-spec"

[features]
std = []

bind_c = [ "bindgen" ]
bind_rs = [ "wiggle", "wasmtime", "std" ]

wiggle = [ "dep:wiggle", "anyhow" ]
wasmtime = [ "dep:wasmtime" ]

default = [ "std", "bind_c", "bind_rs" ]

[dependencies]
cty = "0.2.2"
embedded-hal = "1.0.0-alpha.8"
log = { version = "0.4.14", default_features = false }
anyhow = { version = "*", optional = true }

wiggle = { version = "5.0.0", optional = true }
wasmtime = { version = "5.0.0", optional = true }

[build-dependencies]
bindgen = {version = "0.64.0", default_features = false, features = [ "runtime", "which-rustfmt" ], optional = true }
